# vscode-tauri-app

./: .gitignore  CLAUDE.md  README.md  TODO.md  Taskfile.yml  package-lock.json  package.json  renovate.json  rust-toolchain.toml  test_implementation.md  test_migration.rs  vite.config.ts
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: renovate-pr-check.yaml
database/: schema.sql  seed.sql
docs/: providers_new.md  repositorys_new.md  schema.md  sync.md  test_backend.md
scripts/: build_for_linux.sh  build_for_mac.sh  refresh_for_linux.sh
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  Cargo_test.toml  tauri.conf.json
src-tauri/migrations/: V1__initial_lookup_tables.sql  V2__create_main_tables.sql  V3__create_indexes.sql  V4__seed_default_providers.sql  V5__create_sync_history.sql
src-tauri/src/: database.rs  database_tests.rs  lib.rs  migration_test.rs  minimal_test.rs  simple_test.rs  test_runner.rs
src-tauri/tests/: database_tests.rs  integration_tests.rs  migration_tests.rs
src/backends/: BackendProvider.tsx  MockBackend.ts  NativeBackend.ts  WebBackend.ts
src/components/: AddProvider.css  AddProvider.tsx  AddRepository.css  AddRepository.tsx  Dashboard.css  Dashboard.tsx  GitProviderManager.css  GitProviderManager.tsx  History.tsx  Issues.css  Issues.tsx  Providers.tsx  PullRequests.css  PullRequests.tsx  Repositories.tsx  RepositoryManager.css  RepositoryManager.tsx  Settings.tsx  Workflows.css  Workflows.tsx
src/types/: AppBackend.ts  sql.js.d.ts
src/utils/: timeHelper.ts
