[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3", features = [] }

[dependencies]
tauri = { version = "2.3", features = [], optional = true }
tauri-plugin-opener = { version = "2.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["fs", "rt"] }
log = "0.4"
env_logger = "0.10"
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
reqwest = { version = "0.11", features = ["json"] }
refinery = { version = "0.8", features = ["rusqlite"] }

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["tauri", "tauri-plugin-opener"]
test-only = []
